--- a/.github/workflows/Integrate-Deploy-SOMRelease.yml
+++ b/.github/workflows/Integrate-Deploy-SOMRelease.yml
@@ -29,7 +29,7 @@ jobs:
             
             # List items
             - name: 'List items'
-              run: ls
+              run: ls "unpackaged\project manifest"
 
             - name: 'Deploy the entire branch to Integration org'
               run: sfdx force:source:deploy -x "unpackaged\project manifest\packageSom-2023-6-1.xml" -c --targetusername 00D0D0000008hd1!AREAQCS2C8rVI9G8YiZCINAI6RHhyafEGJ6X9y_Ta90LMt0Qzh7F9KhIGTQUMNE4aF8313Q8wdrrXC2IbLYL.pLbq299AjKd
