--- a/.github/workflows/Integrate-Deploy-SOMRelease.yml
+++ b/.github/workflows/Integrate-Deploy-SOMRelease.yml
@@ -37,4 +37,4 @@ jobs:
               
             # Deploy the entire branch to Integration org
             - name: 'Deploy the entire branch to Integration org'
-              run: sfdx force:source:deploy -x "unpackaged/project manifest/packageSom-2023-6-1.xml" --targetusername 00D0D0000008hd1!AREAQHF7XsdsHArUZJX5zgcBsnsONb9Mky_gYSMQdGnPpH8BJqocgVuGdy3KOTnIlT1OMNsQnZWwaQhYB_fTebAZ9FnisJH7
+              run: sfdx force:source:deploy -x "unpackaged/project manifest/packageSom-2023-6-1.xml" --targetusername 00D0D0000008hd1!AREAQG17VPdcWCtstov9iMyCmCpaqjSy6GG4HOTuFqD1Vl2AfQF.nkh_Wlbbv46mjKenP0ExfnMBD4djag9VO7KQLiSY604x
