--- a/.github/workflows/Integrate-Deploy-SOMRelease.yml
+++ b/.github/workflows/Integrate-Deploy-SOMRelease.yml
@@ -37,4 +37,4 @@ jobs:
               
             # Deploy the entire branch to Integration org
             - name: 'Deploy the entire branch to Integration org'
-              run: sfdx force:source:deploy -x "unpackaged/project manifest/packageSom-2023-6-1.xml" --targetusername 00D0D0000008hd1!AREAQG17VPdcWCtstov9iMyCmCpaqjSy6GG4HOTuFqD1Vl2AfQF.nkh_Wlbbv46mjKenP0ExfnMBD4djag9VO7KQLiSY604x
+              run: sfdx force:source:deploy -x "unpackaged/project manifest/packageSom-2023-6-1.xml" --targetusername 00D0D0000008hd1!AREAQCLt_BIcaR6eDb69uaAVKnnpvuKYl8L37TDYpa3NB4_bfFbOqMnrIxjQZ1rHYdqEHX6_6MhQA0pYE2HABIgFE0FLB261
