--- a/.github/workflows/Prod-Deploy-SOMRelease.yml
+++ b/.github/workflows/Prod-Deploy-SOMRelease.yml
@@ -42,4 +42,4 @@ jobs:
               
             # Deploy the entire branch to Integration org
             - name: 'Deploy the release to UAT org'
-              run: sfdx force:source:deploy -x "unpackaged/project manifest/packageSom-2023-6-1.xml" -u RimowaProdOrg -c
+              run: sfdx force:source:deploy -x "unpackaged/project manifest/packageSom-2023-6-1.xml" -u RimowaProdOrg
