--- a/.github/workflows/Integrate-Deploy-SOMRelease.yml
+++ b/.github/workflows/Integrate-Deploy-SOMRelease.yml
@@ -46,4 +46,4 @@ jobs:
             - name: 'Deploy the entire branch to Integration org'
               run: >
                   echo ${{env.APEX_TESTS}}
-                  sfdx force:source:deploy -x "unpackaged/projectManifest/packageSom-2023-10-1.xml" --testlevel RunSpecifiedTests --runtests $(cat unpackaged/projectManifest/specifiedTestsClass/testsToRun.txt) -u RimowaIntegrateOrg
+                  sfdx force:source:deploy -x "unpackaged/projectManifest/packageSom-2023-10-1.xml" --testlevel RunSpecifiedTests --runtests $(cat unpackaged/projectManifest/specifiedTestsClass/testsToRun-10.1.txt) -u RimowaIntegrateOrg
