--- a/.github/workflows/UAT-Deploy-SOMRelease.yml
+++ b/.github/workflows/UAT-Deploy-SOMRelease.yml
@@ -32,7 +32,7 @@ jobs:
             
             # List items
             - name: 'List items'
-              run: ls 'unpackaged/project manifest'
+              run: ls 'unpackaged/projectManifest'
           
             # Set the instanceUrl config value
             - name: 'Set the instanceUrl config value'
