--- a/.github/workflows/UAT-Deploy-SOMRelease.yml
+++ b/.github/workflows/UAT-Deploy-SOMRelease.yml
@@ -45,5 +45,5 @@ jobs:
             # Deploy the entire branch to Integration org
             - name: 'Deploy the release to UAT org'
               #run: sfdx force:source:deploy -x "unpackaged/projectManifest/packageB2C-2023-12-1.xml" -u RimowaUATOrg
-              #run: sfdx force:source:deploy -x "unpackaged/projectManifest/packageSom-2023-12-1.xml" -u RimowaUATOrg
-              run:  sfdx force:source:deploy -x "unpackaged/projectManifest/packageSom-2023-12-1.xml" --testlevel RunSpecifiedTests --runtests $(cat unpackaged/projectManifest/specifiedTestsClass/testsToRun-12.1.txt) -u RimowaUATOrg --json 
+              run: sfdx force:source:deploy -x "unpackaged/projectManifest/packageSom-2023-12-1.xml" -u RimowaUATOrg
+              #run:  sfdx force:source:deploy -x "unpackaged/projectManifest/packageSom-2023-12-1.xml" --testlevel RunSpecifiedTests --runtests $(cat unpackaged/projectManifest/specifiedTestsClass/testsToRun-12.1.txt) -u RimowaUATOrg --json 
