--- a/.github/workflows/Prod-Deploy-SOMRelease.yml
+++ b/.github/workflows/Prod-Deploy-SOMRelease.yml
@@ -21,7 +21,6 @@ jobs:
                   tar xJf sfdx-linux-x64.tar.xz -C ~/sfdx --strip-components 1
                   echo "$HOME/sfdx/bin" >> $GITHUB_PATH
                   ~/sfdx/bin/sfdx version
-
             # Checkout the source code
             - name: 'Checkout source code'
               uses: actions/checkout@v3
@@ -30,7 +29,7 @@ jobs:
             
             # List items
             - name: 'List items'
-              run: ls 'unpackaged/project manifest'
+              run: ls 'unpackaged/projectManifest'
           
             # Set the instanceUrl config value
             - name: 'Set the instanceUrl config value'
@@ -42,4 +41,5 @@ jobs:
               
             # Deploy the entire branch to Integration org
             - name: 'Deploy the release to UAT org'
-              run: sfdx force:source:deploy -x "unpackaged/project manifest/packageSom-2023-9-1.xml" -u RimowaProdOrg
+             # run: sfdx force:source:deploy -x "unpackaged/projectManifest/packageSom-2023-10-1.xml" -u RimowaProdOrg
+              run:  sfdx force:source:deploy -x "unpackaged/projectManifest/packageSom-2024-06-1.xml" --testlevel RunSpecifiedTests --runtests $(cat unpackaged/projectManifest/specifiedTestsClass/testsToRun-2024-06.1.txt) -u RimowaProdOrg --json 
