--- a/.github/workflows/Integrate-Validate-SOMRelease.yml
+++ b/.github/workflows/Integrate-Validate-SOMRelease.yml
@@ -3,13 +3,15 @@ name: Validate SOM release UAT branch
 
 # Definition when the workflow should run
 on:
-  pull_request:
-    types: [assigned, opened, synchronize, reopened]
+
+  workflow_dispatch
+  #pull_request:
+    #types: [assigned, opened, synchronize, reopened]
     
-    paths:
-      - force-app/**
-    branches:
-      - Release-Candidate
+    #paths:
+     # - force-app/**
+    #branches:
+     # - Release-Candidate
        
             
 
