--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,9 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.inputs.environment == 'integrate-sandbox' }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+        with:
+            node-version: "14"
       - name: Deploy to partial sandbox
         uses: ./.github/actions/deploy-environment
         with:
@@ -34,7 +36,9 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.inputs.environment == 'uat-partial-sandbox' }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+        with:
+              node-version: "14"
       - name: Deploy to partial sandbox
         uses: ./.github/actions/deploy-environment
         with:
@@ -46,7 +50,9 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.inputs.environment == 'production' }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+        with:
+              node-version: "14"
       - name: Deploy to production
         uses: ./.github/actions/deploy-environment
         with:
