workflow deployment - fix action version bis

--- a/.github/actions/actionTest.yml
+++ b/.github/actions/actionTest.yml
@@ -3,7 +3,7 @@ description: Authenticates with JWT and deploys specific package
 
 inputs:
   instanceUrl:
-    description: 'Salesforce instance URL (e.g., https://rimowa.sandbox.my.salesforce.com)'
+    description: 'Salesforce instance URL (e.g., https://empathetic-impala-4d2hgs-dev-ed.trailblaze.my.salesforce.com)'
     required: true
   clientId:
     description: 'Consumer Key of the connected app'
