--- a/.github/workflows/testWorkflow.yml
+++ b/.github/workflows/testWorkflow.yml
@@ -2,22 +2,23 @@
   name: Manual Workflow Deploy
 
   on:
-  workflow_dispatch:
-    inputs:
-      environment:
-        type: choice
-        description: Which environment to deploy to
-        options:
-          - integrate-sandbox
-          - uat-partial-sandbox
-          - production
-        default: 'integrate-sandbox'
-        required: true
-      validateOnly:
-        description: 'Run the deployment as validation only'
-        type: boolean
-        default: false
-
+    workflow_dispatch:
+      inputs:
+        environment:
+          type: choice
+          description: Which environment to deploy to
+          options:
+            - integrate-sandbox
+            - uat-partial-sandbox
+            - production
+          default: 'integrate-sandbox'
+          required: true
+        validateOnly:
+          description: 'Run the deployment as validation only'
+          type: boolean
+          default: false
+          
+jobs:
   deploy-prod-jwt:
     runs-on: ubuntu-latest
     if: ${{ github.event.inputs.environment == 'integrate-sandbox' }}
