--- a/.github/workflows/testWorkflow.yml
+++ b/.github/workflows/testWorkflow.yml
@@ -17,14 +17,15 @@
           description: 'Run the deployment as validation only'
           type: boolean
           default: false
-          
+
 jobs:
   deploy-prod-jwt:
     runs-on: ubuntu-latest
     if: ${{ github.event.inputs.environment == 'integrate-sandbox' }}
     steps:
       - uses: actions/checkout@v3
-
+        with:
+            node-version: "14"
       - name: Deploy via JWT to Production
         uses: ./.github/actions/deploy-jwt
         with:
