--- a/.github/actions/deploy-environment/action.yml
+++ b/.github/actions/deploy-environment/action.yml
@@ -75,15 +75,14 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: Install Salesforce CLI
-    run: |
-      wget https://developer.salesforce.com/media/salesforce-cli/sfdx/channels/stable/sfdx-linux-x64.tar.xz
-      sudo mkdir ~/sfdx-cli
-      sudo tar xJf sfdx-linux-x64.tar.xz -C ~/sfdx-cli --strip-components 1
-      export PATH=$PATH:~/sfdx-cli/bin
-      echo "~/sfdx-cli/bin" >> $GITHUB_PATH
-      sudo chmod -R 777 ~/sfdx-cli
-      sfdx --version
+    # Install Salesforce CLI
+    - name: 'Install Salesforce CLI'
+      run: |
+          wget https://developer.salesforce.com/media/salesforce-cli/sfdx/channels/stable/sfdx-linux-x64.tar.xz
+          mkdir ~/sfdx
+          tar xJf sfdx-linux-x64.tar.xz -C ~/sfdx --strip-components 1
+          echo "$HOME/sfdx/bin" >> $GITHUB_PATH
+          ~/sfdx/bin/sfdx version
 
     - name: Authenticate using JWT (sf CLI)
       shell: bash
