workflow deployment - fix17

--- a/.github/actions/deploy-environment/action.yml
+++ b/.github/actions/deploy-environment/action.yml
@@ -48,8 +48,7 @@ runs:
         deployFlags=(
           --manifest "${{ inputs.manifestPath }}"
           --target-org "${{ inputs.alias }}"
-          --test-level RunSpecifiedTests
-          --runtests "$testClasses"
+          --test-level RunLocalTests
           --wait 30
           --verbose
           --json
