--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -3,6 +3,7 @@
     <types>
         <members>HelloWorldTest</members>
         <members>HelloWorld</members>
+        <members>TestBis</members>
         <name>ApexClass</name>
     </types>
     <version>62.0</version>
