--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,6 +79,25 @@ on:
         default: false
 
 jobs:
+  pmd-run:
+    runs-on: ubuntu-latest
+    steps:
+    # Checkout the source code
+        - name: 'Checkout source code'
+          uses: actions/checkout@v2
+
+        # Install PMD
+        - name: 'Install PMD'
+          run: |
+              PMD_VERSION=`cat pmd/pmd-version.txt`
+              wget https://github.com/pmd/pmd/releases/download/pmd_releases%2F$PMD_VERSION/pmd-bin-$PMD_VERSION.zip
+              unzip pmd-bin-$PMD_VERSION.zip -d ~
+              mv ~/pmd-bin-$PMD_VERSION ~/pmd
+              ~/pmd/bin/run.sh pmd --version
+        # Run PMD scan
+        - name: 'Run PMD scan'
+          run: ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R ruleset.xml -f text
+
   deploy-prod-jwt:
     runs-on: ubuntu-latest
     if: ${{ github.event.inputs.environment == 'integrate-sandbox' }}
@@ -98,6 +117,7 @@ jobs:
             tar xJf sfdx-linux-x64.tar.xz -C ~/sfdx --strip-components 1
             echo "$HOME/sfdx/bin" >> $GITHUB_PATH
             ~/sfdx/bin/sfdx version
+
       - name: Create JWT key file
         run: |
           mkdir -p JWT
