--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,42 +19,24 @@ on:
 
 jobs:
 
-  build:
+  test-upload:
     runs-on: ubuntu-latest
     steps:
-    - name: Create file
-      run: |
-        printf "Hello\nWorld\n" > hw.txt
-
-    - name: Create file
-      run: |
-        echo First        > other.txt
-        echo Second Line >> other.txt
-        echo Third       >> other.txt
+      - name: Checkout code
+        uses: actions/checkout@v2
 
 
-    - name: Show file content
-      run: |
-        pwd
-        ls -la
-        cat hw.txt
-        cat other.txt
+    name: Modify/add files
+    . . .
 
-
-    - name: Create directory and create file in homedir
-      run: |
-        ls -la ~/
-        mkdir ~/.zorg
-        echo First        > ~/.zorg/home.txt
-        echo Second Line >> ~/.zorg/home.txt
-        echo Third       >> ~/.zorg/home.txt
-        ls -la ~/.zorg/
-
-    - name: Show file content
-      run: |
-        ls -la ~/
-        cat ~/.zorg/home.txt
-
+    name: push changes to remote
+    run: |
+    git config --global user.name "user mane"
+    git config --global user.email "user email"
+    
+    git add &lt;pathspec&gt; git commit -m "commit message"
+    git push
+          
   pmd-run:
     runs-on: ubuntu-latest
     outputs:
